# Disha

./: .cursorrules  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CHANGELOG_AGI.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  Dockerfile  LEARNING_LOG.md  LICENSE  README.md  REPORT.md  REPO_WALKTHROUGH.md  SECURITY.md  USAGE_GUIDE.md  WIKI.md  biome.json  docker-compose.prod.yml  docker-compose.yml  final_mypy_errors.txt  gitpretty-apply.sh  index.html  index.txt  lint_report.txt  package-lock.json  package.json  predictive_risk_report.json  pyproject.toml  server.json  tsconfig.json
backend/: README.md  pyproject.toml  requirements.txt  requirements_current.txt
backend/agclaw_backend/: __init__.py  contracts.py  history_store.py  http_api.py  mes_services.py  orchestrator.py  providers.py  server.py  test_fixtures.py
backend/agclaw_backend/data/: mes_dataset_registry.json
backend/app/: main.py
backend/app/agents/: crypto_agent.py  detection_agent.py  education_agent.py  graph_agent.py  growth_agent.py  legal_agent.py  orchestrator.py  physics_agent.py
backend/app/api/: deps.py
backend/app/collaboration/: coordinator.py
backend/app/core/: observability.py  security.py
backend/app/middleware/: security.py
backend/app/models/: intelligence.py
backend/app/multimodal/: audio_agent.py  fusion.py
backend/app/rl/: policy.py  reward.py
backend/scripts/: benchmark_backend.py
backend/tests/: test_contracts.py  test_http_api.py  test_live_providers.py  test_live_vision.py
(+2059 files in other folders)
