[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agclaw-backend"
version = "0.1.0"
description = "Clean-room backend contracts and research orchestrator scaffolding for AG-Claw"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "AG Solution" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["agclaw_backend*"]
